--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "UserAppCon": "Server=10.56.8.36;Database=DB_2023_49;User Id=STUDENT_49;Password=OPENDB_49;TrustServerCertificate=true"
-  },
+    "ConnectionStrings": {
+        "UserAppCon": "Server=DESKTOP-IBO9QGH\\SQLEXPRESS;Database=Pharmacy;Integrated Security=True;TrustServerCertificate=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
