--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "UserAppCon": "Server=DESKTOP-IBO9QGH\\SQLEXPRESS;Database=Pharmacy;Integrated Security=True;TrustServerCertificate=true"
+        "UserAppCon": "Server=LAPTOP-US5UT3JN;Database=Drugs_Store;Integrated Security=True;TrustServerCertificate=true"
     },
   "Logging": {
     "LogLevel": {
