--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
@@ -27,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.60.0",
     "styled-components": "^5.3.9",
+    "swiper": "^11.1.1",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
